--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 ul{
@@ -11,6 +12,160 @@ ul{
   pointer-events: none;
 }
 
+.lista{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  box-shadow: -2px 8px 16px;
+  background-color: #e9eeff;
+}
+
+.lista li{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 2px 5px 10px;
+  width: 200px;
+  margin: 10px auto;
+  background-color: black;
+  height: 200px;
+  cursor: pointer;
+  color: white;
+  justify-content: space-evenly;
+}
+
+.lista li:hover{
+  width: 220px;
+  height: 220px;
+  background-color: rgb(54, 54, 54);
+}
+
+.lista a{
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+.lista li div{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.botao{
+  margin: 10px;
+  border-radius: 10px;
+  background-color: rgb(76, 110, 221);
+  color: white;
+  padding: 5px 20px;
+}
+
+.botao:hover{
+  background-color: rgb(6, 21, 70);
+}
+
+.titulo{
+  font-size: 15px;
+  margin: 15px auto;
+  font-weight: bold;
+}
+
+.esp{
+  margin-top: 15px;
+}
+
+.item-lista{
+  width: 280px !important;
+  height: 240px !important;
+}
+ 
+.item-lista:hover{
+  width: 280px;
+  height: 240px;
+}
+
+.card-time-unico{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.alinhamento{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ver-jogadores{
+  width: 100%;
+  margin: 0;
+}
+
+.lista-jogadores li{
+  display: flex;
+  justify-content: space-around;
+}
+
+.lista-jogadores li p{
+  width: 33%;
+
+}
+
+.item-jogador{
+  background-color: #bebebe;
+  box-shadow: 2px 2px 2px;
+  margin-top: 5px;
+  color: black;
+  cursor: pointer;
+}
+
+.item-jogador p{
+  margin: 0;
+}
+.titulo-jogador{
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.info-jogador p{
+  margin: 0;
+}
+.sub-titulo{
+  font-weight: bold;
+  margin-right: 5px !important;
+}
+.dado-unico{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.info-jogador{
+  margin: 10px auto;
+  padding: 15px;
+  text-align: center;
+  background: black;
+  color: white;
+  width: 360px;
+  border-radius: 10px;
+}
+.habilidades{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.habilidade {
+  display: flex;
+  width: 50% !important;
+  text-align: center;
+  justify-content: center;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
