--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,26 @@ ul{
   text-align: center;
   justify-content: center;
 }
+.titulo span{
+  text-transform: uppercase;
+  font-size: 20px;
+}
+.topo, .rodape{
+  display: flex;
+  color: white;
+  background-color: black;
+  padding: 10px;
+  text-transform: uppercase;
+  font-family: 'Impact';
+}
+.topo div, .rodape div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.topo-logo{
+  width: 100px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
